--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -43,7 +43,7 @@
     </div>
     <ul class="menu menu--header-menu">
       <li class="menu__item" routerLinkActive="menu__link--active">
-        <a class="menu__link" href="https://exrates.me/dashboard">
+        <a class="menu__link" routerLink="/">
           <span class="menu__link-text">Trade
           </span>
         </a>
