--- a/src/assets/scss/components/_widget.scss
+++ b/src/assets/scss/components/_widget.scss
@@ -1061,6 +1061,9 @@
         border-radius: 4px;
       }
     }
+    .trade-history-time {
+      color: #959BA5;
+    }
     /*--- elements end ---*/
   }
 }
