added desktop and refactoring

--- a/src/app/orders/open-orders/open-orders.component.html
+++ b/src/app/orders/open-orders/open-orders.component.html
@@ -199,6 +199,7 @@
             bindValue="id"
             name="currencyPair"
             [(ngModel)]="currencyPairId"
+            (change)="loadOrders()"
           ></ng-select>
           <div class="wrap-input__line"></div>
         </div>
