--- a/src/app/funds/transaction-history/transaction-history.component.html
+++ b/src/app/funds/transaction-history/transaction-history.component.html
@@ -152,13 +152,14 @@
     <!--filter-popup end-->
   </div>
   <!--orders-mob end-->
+
   <!--transaction-history-desktop start-->
   <div class="transaction">
     <div class="page-title">
       <h1 class="page-title__text">
         Transaction history
       </h1>
-      <button class="btn transaction__title-btn">
+      <button class="btn transaction__title-btn" (click)="downloadExcel()">
         <span class="btn__icon btn__icon--blue">
           <svg width="13" height="14" viewBox="0 0 13 14" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M11.1952 8.92188V12.12H1.80482V8.92188H0V13.06C0 13.5789 0.403462 13.9997 0.903755 13.9997H12.0962C12.5961 13.9997 13 13.5794 13 13.06V8.92188H11.1952Z" />
@@ -171,29 +172,56 @@
     <form action="">
       <div class="row transaction__filters">
         <div class="wrap-input wrap-input--with-icon transaction__search">
-          <input class="wrap-input__input" name="currency" type="text" required>
+          <!-- <input class="wrap-input__input" name="currency" type="text" required>
           <label class="wrap-input__label" for="">Currency</label>
           <div class="wrap-input__icon">
             <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" clip-rule="evenodd" d="M15 8C15 11.8662 11.8652 15 8 15C4.13477 15 1 11.8662 1 8C1 4.13379 4.13477 1 8 1C11.8652 1 15 4.13379 15 8ZM13.293 13.999C11.8828 15.2441 10.0293 16 8 16C3.58203 16 0 12.418 0 8C0 3.58203 3.58203 0 8 0C12.418 0 16 3.58203 16 8C16 10.0293 15.2461 11.8818 14 13.292L17.8535 17.1465C17.9141 17.207 17.957 17.2803 17.9805 17.3574C18.0293 17.5273 17.9883 17.7188 17.8535 17.8535C17.6582 18.0488 17.3418 18.0488 17.1465 17.8535L13.293 13.999Z" />
             </svg>
           </div>
-          <div class="wrap-input__line"></div>
+          <div class="wrap-input__line"></div> -->
+          <ng-select
+            class="custom"
+            [items]="currencyForChoose$ | async"
+            bindLabel="name"
+            placeholder="Currency"
+            bindValue="id"
+            name="currencyPair"
+            [(ngModel)]="currencyId"
+          ></ng-select>
         </div>
         <div class="wrap-input transaction__datepicker">
-          <label class="wrap-input__label">From</label>
+            <label class="wrap-input__label" [ngClass]="{'select-input_label': modelDateFrom?.date}">From</label>
 
-          <my-date-picker name="from"></my-date-picker>
+            <my-date-picker
+              name="history-from"
+              [options]="myDatePickerOptions"
+              [(ngModel)]="modelDateFrom"
+              (dateChanged)="dateFromChanged($event)"
+            >
+            </my-date-picker>
 
           <div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>
         </div>
         <div class="wrap-input transaction__datepicker">
           <label class="wrap-input__label">To</label>
 
-          <my-date-picker name="to"></my-date-picker>
+          <my-date-picker
+            name="history-to"
+            [options]="myDatePickerOptions"
+            [(ngModel)]="modelDateTo"
+            (dateChanged)="dateToChanged($event)"
+          >
+          </my-date-picker>
           <div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>
         </div>
+        <button class="btn btn--auto btn--empty-blue orders__search-btn" (click)="onFilter()">
+          <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M15 8C15 11.8662 11.8652 15 8 15C4.13477 15 1 11.8662 1 8C1 4.13379 4.13477 1 8 1C11.8652 1 15 4.13379 15 8ZM13.293 13.999C11.8828 15.2441 10.0293 16 8 16C3.58203 16 0 12.418 0 8C0 3.58203 3.58203 0 8 0C12.418 0 16 3.58203 16 8C16 10.0293 15.2461 11.8818 14 13.292L17.8535 17.1465C17.9141 17.207 17.957 17.2803 17.9805 17.3574C18.0293 17.5273 17.9883 17.7188 17.8535 17.8535C17.6582 18.0488 17.3418 18.0488 17.1465 17.8535L13.293 13.999Z"/>
+          </svg>
+        </button>
       </div>
+
     </form>
     <!--table start-->
     <table class="table">
@@ -208,94 +236,59 @@
       </tr>
       </thead>
       <tbody class="table__body">
-      <tr class="table__row">
-        <td class="table__cell">
-          Completed
-        </td>
-        <td class="table__cell">
-          <div class="table__date-time">
-            <div>Th 13.06.2018</div>
-            <div>10:59:41</div>
-          </div>
-        </td>
-        <td class="table__cell">
-          <div class="orders__pair-wrap">
-            <div class="orders__pair">
-              <div class="orders__pair-icon">
-                 <img [src]="'BTC' | getIconUrl">
+        <tr
+          class="table__row"
+          *ngFor="let item of transactionsItems$ | async | paginate: { itemsPerPage: countPerPage, currentPage: currentPage, totalItems: countOfEntries$ | async }"
+        >
+          <td class="table__cell">
+            {{item.status}}
+          </td>
+          <td class="table__cell">
+            <div class="table__date-time">
+              <div>{{item.datetime | date:"EEEEEE"}} {{item.datetime | date:"dd.MM.yyyy"}}</div>
+              <div>{{item.datetime | date:"HH:mm:ss"}}</div>
+            </div>
+          </td>
+          <td class="table__cell">
+            <div class="orders__pair-wrap">
+              <div class="orders__pair">
+                <div class="orders__pair-icon">
+                  <img [src]="item.currencyName | getIconUrl">
+                </div>
+                <span>{{item.currencyName}}</span>
               </div>
-              <span>BTC</span>
             </div>
-          </div>
-        </td>
-        <td class="table__cell">
-          <span> 0.00000001 </span>
-        </td>
-        <td class="table__cell">
-          <span class="txt-green">Input</span>
-        </td>
-        <td class="table__cell">
-          <span>1LUaz5g9xSM4W3zBZQFnghmxPw14AFcByz</span>
-        </td>
-      </tr>
-      <tr class="table__row">
-        <td class="table__cell">
-          <div class="transaction__confirm">
-            On confirmation
-            <div class="counter">
-              <span>4</span>/5
-            </div>
-          </div>
-        </td>
-        <td class="table__cell">
-          <div class="table__date-time">
-            <div>Th 13.06.2018</div>
-            <div>10:59:41</div>
-          </div>
-        </td>
-        <td class="table__cell">
-          <div class="orders__pair-wrap">
-            <div class="orders__pair">
-              <div class="orders__pair-icon">
-                 <img src="../../assets/img/btc-icon.svg">
-              </div>
-              <span>BTC</span>
-            </div>
-          </div>
-        </td>
-        <td class="table__cell">
-          <span> 0.00000001 </span>
-        </td>
-        <td class="table__cell">
-          <span class="txt-red">Output</span>
-        </td>
-        <td class="table__cell">
-          <span>1LUaz5g9xSM4W3zBZQFnghmxPw14AFcByz</span>
-        </td>
-      </tr>
+          </td>
+          <td class="table__cell">
+            <span>{{item.amount | roundCurrency: isFiat(item.currencyName) | formatCurrency}}</span>
+          </td>
+          <td class="table__cell">
+            <span class="txt-green">{{item.sourceType}}</span>
+          </td>
+          <td class="table__cell">
+            <span>{{item.transactionHash}}</span>
+          </td>
+        </tr>
       </tbody>
     </table>
     <!--table end-->
-    <!--paginator start-->
-    <div class="row row--aic transaction__paginator">
-      <div class="show-filter">
-        Showing <span>1</span> to
-        <div class="dropdown" #dropdown>
-          <div class="dropdown__btn">14</div>
-          <ul class="dropdown__list">
-            <li class="dropdown__item">14</li>
-            <li class="dropdown__item">24</li>
-            <li class="dropdown__item">34</li>
-            <li class="dropdown__item">44</li>
-          </ul>
-        </div>
-        of <span>192</span> entries.
+     <!--paginator start-->
+     <div class="row row--aic orders__paginator">
+        <app-page-items-dropdown
+          [countPerPage]="countPerPage"
+          [countOfEntries]="countOfEntries$ | async"
+          (onChange)="changeItemsPerPage($event)"
+        ></app-page-items-dropdown>
+        <ul class="paginator" style="margin-left: auto;"  *ngIf="(countOfEntries$ | async) > countPerPage">
+          <pagination-controls
+            maxSize="7"
+            [previousLabel]="''"
+            [nextLabel]="''"
+            (pageChange)="changePage($event)"
+          ></pagination-controls>
+        </ul>
       </div>
-      <!--<ul class="paginator" style="margin-left: auto;">-->
-        <!--<pagination-controls (pageChange)="changePage($event)" [previousLabel]="''" [nextLabel]="''"></pagination-controls>-->
-      <!--</ul>-->
-    </div>
-    <!--paginator end-->
+      <!--paginator end-->
   </div>
   <!--transaction-history-desktop end-->
 </div>
