--- a/src/app/funds/transaction-history/transaction-history.component.html
+++ b/src/app/funds/transaction-history/transaction-history.component.html
@@ -1,120 +1,118 @@
 <div class="container">
-  <!--orders-mob start-->
+  <!--transaction-history-mob start-->
   <div class="transaction transaction--mob">
     <div class="transaction__header-mob">
       <div class=" orders__page-title">
         Transaction history
       </div>
-      <div class="orders__filter-btn">
+      <div class="orders__filter-btn" (click)="openFilterPopup()">
         <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M15.9317 0.44323C15.8028 0.147863 15.5799 0.000159206 15.2618 0H0.737807C0.420134 0 0.196893 0.147863 0.0682816 0.44323C-0.0602502 0.753723 -0.00735105 1.01904 0.227217 1.23867L5.82145 6.84086V12.3635C5.82145 12.5607 5.89335 12.731 6.03702 12.8751L8.9417 15.784C9.07798 15.9278 9.24813 16 9.45245 16C9.54315 16 9.63766 15.9809 9.73602 15.9431C10.0312 15.8142 10.1788 15.5908 10.1788 15.2726V6.8409L15.7728 1.2387C16.0075 1.01908 16.0602 0.753842 15.9317 0.44323Z" />
         </svg>
         Filters
       </div>
     </div>
-    <table class="table table--mob">
-      <thead class="table__head">
-      <tr class="table__head-row">
-        <th class="table__cell-head table__cell-head--tal">Date / Type</th>
-        <th class="table__cell-head table__cell-head--tal">Currency</th>
-        <th class="table__cell-head table__cell-head--tar">Amount</th>
-      </tr>
-      </thead>
-      <tbody class="table__body table__body--none-shadow">
-      <!-- t-row start-->
-        <tr class="table__row--mob">
-          <td class="table__cell table__cell--tal">
-            <div>Withdraw</div>
-            <div class="table__date-time">
-              <div>Th 13.06.2018</div>
-              <div>10:59:41</div>
-            </div>
-          </td>
-          <td class="table__cell table__cell--tal">
-            <div>IDR</div>
-            <div class="transaction__currency-type">
-              Fiat
-            </div>
-          </td>
-          <td class="table__cell table__cell--tar">
-            <div class="txt-red">-100 000 000</div>
-          </td>
-          <td class="table__cell table__cell--arr-mob">
-            <svg width="10" height="6" viewBox="0 0 15 9" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M13.7272 1.36396L7.36328 7.72792L0.99932 1.36396" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-            </svg>
-          </td>
+    <div
+      #scrollContainer
+      [ngStyle]="tableScrollStyles"
+      infiniteScroll
+      [infiniteScrollDistance]="2"
+      [infiniteScrollThrottle]="50"
+      [scrollWindow]="false"
+      [horizontal]="false"
+      (scrolled)="loadMoreTransactions()"
+    >
+      <table class="table table--mob">
+        <thead class="table__head">
+        <tr class="table__head-row">
+          <th class="table__cell-head table__cell-head--tal">Date / Type</th>
+          <th class="table__cell-head table__cell-head--tal">Currency</th>
+          <th class="table__cell-head table__cell-head--tar">Amount</th>
         </tr>
-      <tr>
-        <td colspan="4">
-          <div class="table__row-mob-line"></div>
-        </td>
-      </tr>
-      <tr class="table__row--mob">
-        <td class="table__cell table__cell--tal">
-          <div>Withdraw</div>
-          <div class="table__date-time">
-            <div>Th 13.06.2018</div>
-            <div>10:59:41</div>
-          </div>
-        </td>
-        <td class="table__cell table__cell--tal">
-          <div>IDR</div>
-          <div class="transaction__currency-type">
-            Fiat
-          </div>
-        </td>
-        <td class="table__cell table__cell--tar">
-          <div class="txt-green">+100 000 000</div>
-        </td>
-        <td class="table__cell table__cell--arr-mob">
-          <svg width="10" height="6" viewBox="0 0 15 9" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M13.7272 1.36396L7.36328 7.72792L0.99932 1.36396" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-          </svg>
-        </td>
-      </tr>
-      <tr>
-        <td colspan="4">
-          <div class="table__row-mob-line"></div>
-        </td>
-      </tr>
-        <tr class="table__details">
-          <td class="table__details-cell" colspan="4">
-            <div class="table__details-item">
-              <div class="table__details-item-title">Comission</div>
-              <div class="table__details-item-value">0.02% ~ 200 000</div>
-            </div>
-            <div class="table__details-item">
-              <div class="table__details-item-title">Payment system</div>
-              <div class="table__details-item-value">CIMB NAGA</div>
-            </div>
-            <div class="table__details-item">
-              <div class="table__details-item-title">Transaction id</div>
-              <div class="table__details-item-value">324</div>
-            </div>
-            <div class="table__details-item">
-              <div class="table__details-item-title">Transaction hash</div>
-              <div class="table__details-item-value">1adasJSA2141saDln
-                sadK3124sad</div>
-            </div>
-            <div class="table__details-item">
-              <div class="row">
-                <button class="btn btn--small btn--empty-blue">I paid</button>
-                <button class="btn btn--small btn--empty-blue" style="margin-left: 20px;">Revoke</button>
+        </thead>
+        <tbody class="table__body table__body--none-shadow">
+        <!-- t-row start-->
+        <ng-container *ngFor="let item of transactionsItems$ | async">
+          <tr class="table__row--mob" [attr.data-id]="item.id" (click)="toggleDetails($event)">
+            <td class="table__cell table__cell--tal">
+              <div>
+                <span class="arr arr--mr4 "
+                  [ngClass]="{
+                    'arr--red': item.sourceType === 'WITHDRAW',
+                    'arr--green': item.sourceType === 'REFILL'
+                  }"
+                ></span>
+                <span>{{item.sourceType === 'REFILL' ? 'Refill' : ''}}{{item.sourceType === 'WITHDRAW' ? 'Withdraw' : ''}}</span>
               </div>
-            </div>
+              <div class="balance__request-mob-date">
+                <div>{{item.datetime | dateWrapper | date: 'EEEEEE dd.MM.yyyy'}}</div>
+                <div>{{item.datetime | dateWrapper | date: 'HH:mm:ss'}}</div>
+              </div>
+            </td>
+            <td class="table__cell table__cell--tal">
+              <div>{{item.currencyName}}</div>
+              <div class="transaction__currency-type">
+                {{isFiat(item.currencyName) ? 'Fiat' : 'Crypto'}}
+              </div>
+            </td>
+            <td class="table__cell table__cell--tar">
+              <div class="txt-red">{{item.amount | roundCurrency: isFiat(item.currencyName) | formatCurrency}}</div>
+            </td>
+            <td class="table__cell table__cell--arr-mob">
+              <svg width="10" height="6" viewBox="0 0 15 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M13.7272 1.36396L7.36328 7.72792L0.99932 1.36396" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
+            </td>
+          </tr>
+          <tr>
+            <td colspan="4">
+              <div class="table__row-mob-line"></div>
+            </td>
+          </tr>
+          <tr class="table__details" [id]="item.id">
+            <td class="table__details-cell" colspan="4">
+              <div class="table__details-item">
+                <div class="table__details-item-title">Comission</div>
+                <div class="table__details-item-value">{{item.commissionAmount | roundCurrency: isFiat(item.currencyName) | formatCurrency}}</div>
+              </div>
+              <div class="table__details-item">
+                <div class="table__details-item-title">Payment system</div>
+                <div class="table__details-item-value">{{item.merchantName}}</div>
+              </div>
+              <div class="table__details-item">
+                <div class="table__details-item-title">Transaction id</div>
+                <div class="table__details-item-value">{{item.transactionsId}}</div>
+              </div>
+              <div class="table__details-item">
+                <div class="table__details-item-title">Transaction hash</div>
+                <div class="table__details-item-value">{{item.transactionHash}}</div>
+              </div>
+              <div class="table__details-item">
+                <div class="row">
+                  <!-- <button class="btn btn--small btn--empty-blue">I paid</button> -->
+                  <button class="btn btn--small btn--empty-blue" style="margin-left: 20px;">Revoke</button>
+                </div>
+              </div>
+            </td>
+          </tr>
+        </ng-container>
+
+        <tr class="table__row--mob" *ngIf="!(transactionsItems$ | async).length">
+          <td class="table__cell table__cell--taс" colspan="4">
+            No matching records found
           </td>
         </tr>
-      <!-- t-row end-->
-      </tbody>
-    </table>
+        <!-- t-row end-->
+        </tbody>
+      </table>
+    </div>
     <!--filter-popup start-->
-    <div class="filters-popup">
+    <div class="filters-popup" [ngClass]="{'show-filter-popup': showFilterPopup}">
       <div class="filters-popup__header">
         <div class=" filters-popup__title">
           Transactions filters
         </div>
-        <div class="filters-popup__close">
+        <div class="filters-popup__close" (click)="closeFilterPopup()">
           <svg width="15" height="17" viewBox="0 0 15 17" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M1.73781 0.627721C1.36501 0.220243 0.732466 0.192129 0.324987 0.564928C-0.0824919 0.937728 -0.110605 1.57027 0.262194 1.97775L1.73781 0.627721ZM13.2622 16.187C13.635 16.5945 14.2675 16.6226 14.675 16.2498C15.0825 15.877 15.1106 15.2445 14.7378 14.837L13.2622 16.187ZM14.7378 1.97775C15.1106 1.57027 15.0825 0.937728 14.675 0.564928C14.2675 0.192129 13.635 0.220243 13.2622 0.627721L14.7378 1.97775ZM0.262219 14.837C-0.110581 15.2445 -0.0824672 15.877 0.325012 16.2498C0.732491 16.6226 1.36503 16.5945 1.73783 16.187L0.262219 14.837ZM0.262194 1.97775L6.7622 9.08241L8.23781 7.73239L1.73781 0.627721L0.262194 1.97775ZM6.7622 9.08241L13.2622 16.187L14.7378 14.837L8.23781 7.73239L6.7622 9.08241ZM13.2622 0.627721L6.7622 7.73239L8.23781 9.08241L14.7378 1.97775L13.2622 0.627721ZM6.7622 7.73239L0.262219 14.837L1.73783 16.187L8.23781 9.08241L6.7622 7.73239Z"
                   fill="#237BEF" />
@@ -123,35 +121,56 @@
       </div>
       <form action="#">
         <div class="wrap-input wrap-input--with-icon filters-popup__search">
-          <input class="wrap-input__input" name="currency"type="text" required>
+          <!-- <input class="wrap-input__input" name="currency"type="text" required>
           <label class="wrap-input__label" for="">Search</label>
           <div class="wrap-input__icon">
             <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" clip-rule="evenodd" d="M15 8C15 11.8662 11.8652 15 8 15C4.13477 15 1 11.8662 1 8C1 4.13379 4.13477 1 8 1C11.8652 1 15 4.13379 15 8ZM13.293 13.999C11.8828 15.2441 10.0293 16 8 16C3.58203 16 0 12.418 0 8C0 3.58203 3.58203 0 8 0C12.418 0 16 3.58203 16 8C16 10.0293 15.2461 11.8818 14 13.292L17.8535 17.1465C17.9141 17.207 17.957 17.2803 17.9805 17.3574C18.0293 17.5273 17.9883 17.7188 17.8535 17.8535C17.6582 18.0488 17.3418 18.0488 17.1465 17.8535L13.293 13.999Z" />
             </svg>
-          </div>
+          </div> -->
+          <ng-select
+            class="custom"
+            [items]="currencyForChoose$ | async"
+            bindLabel="name"
+            placeholder="Currency"
+            bindValue="id"
+            name="currencyPair"
+            [(ngModel)]="currencyId"
+          ></ng-select>
           <div class="wrap-input__line"></div>
         </div>
         <div class="row row--jcsb">
           <div class="wrap-input filters-popup__datepicker">
-            <label class="wrap-input__label">From</label>
+            <label class="wrap-input__label" [ngClass]="{'select-input_label': modelDateFrom?.date}" >From</label>
 
-            <my-date-picker name="from"></my-date-picker>
+            <my-date-picker
+              name="from"
+              [options]="myDatePickerOptions"
+              [(ngModel)]="modelDateFrom"
+              (dateChanged)="dateFromChanged($event)"
+            >
+            </my-date-picker>
             <div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>
           </div>
           <div class="wrap-input filters-popup__datepicker">
-            <label class="wrap-input__label">To</label>
+            <label class="wrap-input__label" [ngClass]="{'select-input_label': modelDateTo?.date}" >To</label>
 
-            <my-date-picker name="to"></my-date-picker>
+            <my-date-picker
+              name="to"
+              [options]="myDatePickerOptions"
+              [(ngModel)]="modelDateTo"
+              (dateChanged)="dateToChanged($event)"
+            >
+            </my-date-picker>
             <div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>
           </div>
         </div>
-        <button class="btn filters-popup__btn">See <span>5</span> results</button>
+        <button class="btn filters-popup__btn"  (click)="closeFilterPopup()">See results</button>
       </form>
     </div>
     <!--filter-popup end-->
   </div>
-  <!--orders-mob end-->
+  <!--transaction-history-mob end-->
 
   <!--transaction-history-desktop start-->
   <div class="transaction">
@@ -204,7 +223,7 @@
           <div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>
         </div>
         <div class="wrap-input transaction__datepicker">
-          <label class="wrap-input__label">To</label>
+          <label class="wrap-input__label" [ngClass]="{'select-input_label': modelDateTo?.date}" >To</label>
 
           <my-date-picker
             name="history-to"
@@ -267,6 +286,12 @@
           </td>
           <td class="table__cell">
             <span>{{item.transactionHash}}</span>
+          </td>
+        </tr>
+
+        <tr class="table__row" *ngIf="!(transactionsItems$ | async).length">
+          <td class="table__cell table__cell--tac" colspan="6">
+            No matching records found
           </td>
         </tr>
       </tbody>
