--- a/src/app/dashboard/components/order-book/order-book.component.html
+++ b/src/app/dashboard/components/order-book/order-book.component.html
@@ -3,7 +3,7 @@
   <!--<div class="order-book-bg order-book-bg&#45;&#45;red" [ngClass]="{'show': !isBuy}"></div>-->
   <div class="order-book-bg order-book-bg--main" #mainContent [ngClass]="{'show': !isBuy}"></div>
   <div class="widget__header panel-heading">
-    <span class="widget__name">Order book</span>
+    <span class="widget__name">{{'Order book' | translate}}</span>
     <a href="#" class="widget__question">
       <span class="widget__question-img">
         <svg width="8" height="13" viewBox="0 0 8 13" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -30,7 +30,7 @@
       <div class="head">
         <div class="order table__cell-head table__cell-head--tal table__cell-head--p4 table__cell-head--blue">
           <span>
-            Total
+            {{'Total' | translate}}
           </span>
         </div>
         <!--<div class="info table__cell-head table__cell-head&#45;&#45;tal table__cell-head&#45;&#45;p4">-->
@@ -40,12 +40,12 @@
         <!--</div>-->
         <div class="price table__cell-head table__cell-head--tal table__cell-head--p4">
           <span>
-            Price
+            {{'Price' | translate}}
           </span>
         </div>
         <div class="total table__cell-head table__cell-head--tal table__cell-head--p4">
           <span>
-            Amount
+            {{'Amount' | translate}}
           </span>
         </div>
       </div>
@@ -209,7 +209,7 @@
       <div class="head">
         <div class="order table__cell-head table__cell-head--tal table__cell-head--p4">
           <span>
-            Total
+            {{'Total' | translate}}
           </span>
         </div>
         <div class="info table__cell-head table__cell-head--tal table__cell-head--p4">
@@ -219,12 +219,12 @@
         </div>
         <div class="price table__cell-head table__cell-head--tal table__cell-head--p4">
           <span>
-            Price
+            {{'Price' | translate}}
           </span>
         </div>
         <div class="total table__cell-head table__cell-head--tal table__cell-head--p4">
           <span>
-             Amount
+             {{'Amount' | translate}}
           </span>
         </div>
       </div>
