--- a/src/app/dashboard/components/trade-history/trade-history.component.html
+++ b/src/app/dashboard/components/trade-history/trade-history.component.html
@@ -1,6 +1,6 @@
 <div class="widget widget--gradient">
   <div class="widget__header panel-heading">
-    <span class="widget__name">Trade history</span>
+    <span class="widget__name">{{'Trade history' | translate}}</span>
     <a href="#" class="widget__question">
       <span class="widget__question-img">
         <svg width="8" height="13" viewBox="0 0 8 13" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -62,7 +62,7 @@
   </div>
 
   <div class="widget__header--mob">
-    <div class="widget__name-mob">Trade history</div>
+    <div class="widget__name-mob">{{'Trade history' | translate}}</div>
   </div>
   <div class="widget__content">
     <!--table start-->
@@ -73,8 +73,8 @@
         <table class="table widget__table">
           <thead>
             <tr>
-              <th class="table__cell-head table__cell-head--tal table__cell-head--p4">Time</th>
-              <th class="table__cell-head table__cell-head--tal table__cell-head--p4">Rate for</th>
+              <th class="table__cell-head table__cell-head--tal table__cell-head--p4">{{'Time' | translate}}</th>
+              <th class="table__cell-head table__cell-head--tal table__cell-head--p4">{{'Rate for' | translate}}</th>
               <th class="table__cell-head table__cell-head--tar table__cell-head--p4"><span>{{firstCurrency}}</span></th>
             </tr>
           </thead>
@@ -223,9 +223,9 @@
       <table class="table widget__table widget__table--mob">
         <thead>
           <tr>
-            <th class="table__cell-head table__cell-head--tal table__cell-head--p4">Time</th>
-            <th class="table__cell-head table__cell-head--tal table__cell-head--p4">Rate for</th>
-            <th class="table__cell-head table__cell-head--tar table__cell-head--p4"><span>BTC</span></th>
+            <th class="table__cell-head table__cell-head--tal table__cell-head--p4">{{'Time' | translate}}</th>
+            <th class="table__cell-head table__cell-head--tal table__cell-head--p4">{{'Rate for' | translate}}</th>
+            <th class="table__cell-head table__cell-head--tar table__cell-head--p4"><span>{{firstCurrency}}</span></th>
           </tr>
         </thead>
         <tbody class="table__body table__body--none-shadow">
