--- a/src/app/dashboard/components/currency-pair-info/currency-pair-info.component.html
+++ b/src/app/dashboard/components/currency-pair-info/currency-pair-info.component.html
@@ -31,15 +31,15 @@
       <div class="currency-pair-info__price">{{!currentCurrencyInfo || !currentCurrencyInfo.currencyRate ? 0 :currentCurrencyInfo.currencyRate | replaceNumber:isFiat }} {{ secondCurrency }}</div>
     </div>
     <div class="currency-pair-info__item" style="min-width: 130px;">
-      <div class="currency-pair-info__item-title">24h hight</div>
+      <div class="currency-pair-info__item-title">{{'24h hight' | translate}}</div>
       <span class="currency-pair-info__item-value">{{!currentCurrencyInfo ? 0 :currentCurrencyInfo.rateHigh | number:'1.0-8' | replaceNumber }}</span>
     </div>
     <div class="currency-pair-info__item" style="min-width: 130px;">
-      <div class="currency-pair-info__item-title">24h low</div>
+      <div class="currency-pair-info__item-title">{{'24h low' | translate}}</div>
       <span class="currency-pair-info__item-value">{{ !currentCurrencyInfo ? 0 :currentCurrencyInfo.rateLow | number:'1.0-8' | replaceNumber}}</span>
     </div>
     <div class="currency-pair-info__item" style="min-width: 180px;">
-      <div class="currency-pair-info__item-title">24h volume</div>
+      <div class="currency-pair-info__item-title">{{'24h volume' | translate}}</div>
       <span class="currency-pair-info__item-value"> {{!currentCurrencyInfo ?  0  : currentCurrencyInfo.volume24h | number:'1.0-0' | replaceNumber}} {{ firstCurrency }}</span>
     </div>
     <!--<div class="currency-pair-info__item" *ngIf="userBalanceInfo">-->
