--- a/src/app/dashboard/components/embedded-orders/embedded-orders-history/embedded-orders-history.component.html
+++ b/src/app/dashboard/components/embedded-orders/embedded-orders-history/embedded-orders-history.component.html
@@ -1,21 +1,21 @@
 <table class="table widget__table">
   <thead>
   <tr>
-    <th class="table__cell-head table__cell-head--tal">Order id</th>
+    <th class="table__cell-head table__cell-head--tal">{{'Order id' | translate}}</th>
     <th class="table__cell-head table__cell-head--tal">
       <svg class="table__cell-head-arr" width="6" height="8" viewBox="0 0 6 8" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path
           d="M5.86338 3.74894C6.06488 3.99981 6.04068 4.38035 5.80935 4.59887L3.37001 7.84701L3.36491 7.85187C3.16243 8.04303 2.86838 8.04686 2.66309 7.87675C2.6518 7.86737 2.64073 7.85746 2.62999 7.84701L0.190654 4.59887C-0.0406818 4.38035 -0.0648789 3.99981 0.136618 3.74894C0.338115 3.49806 0.689025 3.47182 0.92047 3.69031L2.44455 6.07412L2.44455 0.602408C2.44455 0.269701 2.69325 0 3.00011 0C3.30697 0 3.55566 0.269701 3.55566 0.602408L3.55566 6.07391L5.07953 3.69031C5.31097 3.47182 5.66188 3.49806 5.86338 3.74894Z"/>
       </svg>
-      Created
+      {{'Created' | translate}}
     </th>
     <!--<th class="table__cell-head table__cell-head&#45;&#45;tal">Order</th>-->
-    <th class="table__cell-head table__cell-head--tal">Type</th>
-    <th class="table__cell-head table__cell-head--tal">Average Price</th>
-    <th class="table__cell-head table__cell-head--tal">Amount</th>
-    <th class="table__cell-head table__cell-head--tal">Fee</th>
-    <th class="table__cell-head table__cell-head--tal">Total</th>
-    <th class="table__cell-head table__cell-head--tal">Status of order</th>
+    <th class="table__cell-head table__cell-head--tal">{{'Type' | translate}}</th>
+    <th class="table__cell-head table__cell-head--tal">{{'Average Price' | translate}}</th>
+    <th class="table__cell-head table__cell-head--tal">{{'Amount' | translate}}</th>
+    <th class="table__cell-head table__cell-head--tal">{{'Fee' | translate}}</th>
+    <th class="table__cell-head table__cell-head--tal">{{'Total' | translate}}</th>
+    <th class="table__cell-head table__cell-head--tal">{{'Status of order' | translate}}</th>
   </tr>
   </thead>
   <tbody class="table__body table__body--none-shadow" *ngIf="historyOrders">
