--- a/src/app/dashboard/components/markets/markets.component.html
+++ b/src/app/dashboard/components/markets/markets.component.html
@@ -1,6 +1,6 @@
 <div class="widget widget--gradient">
   <div class="widget__header panel-heading">
-    <span class="widget__name">Markets</span>
+    <span class="widget__name">{{'Markets' | translate}}</span>
     <a href="#" class="widget__question">
       <span class="widget__question-img">
         <svg width="8" height="13" viewBox="0 0 8 13" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -21,14 +21,14 @@
   </div>
 
   <div class="widget__header--mob" *ngIf="!marketSearch">
-    <div class="widget__name-mob">Markets</div>
+    <div class="widget__name-mob">{{'Markets' | translate}}</div>
     <div class="widget__search-btn" (click)="toggleSearchModal()">
       <svg width="14" height="14" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path
           d="M7.22222 13.6444C8.78354 13.6444 10.2149 13.0869 11.3278 12.1605L14.1947 15.0275C14.4247 15.2575 14.7975 15.2575 15.0275 15.0275C15.2575 14.7975 15.2575 14.4247 15.0275 14.1947L12.1605 11.3278C13.0869 10.2149 13.6444 8.78354 13.6444 7.22222C13.6444 3.67557 10.7689 0.8 7.22222 0.8C3.67557 0.8 0.8 3.67557 0.8 7.22222C0.8 10.7689 3.67557 13.6444 7.22222 13.6444ZM12.4667 7.22222C12.4667 10.1188 10.1188 12.4667 7.22222 12.4667C4.32563 12.4667 1.97778 10.1188 1.97778 7.22222C1.97778 4.32563 4.32563 1.97778 7.22222 1.97778C10.1188 1.97778 12.4667 4.32563 12.4667 7.22222Z"
           stroke-width="0.4" stroke-linecap="round" stroke-linejoin="round"/>
       </svg>
-      Search
+      {{'Search' | translate}}
     </div>
   </div>
   <div class="widget__content">
@@ -66,7 +66,7 @@
               d="M6.52447 0.463524C6.67415 0.00286841 7.32585 0.00286996 7.47553 0.463525L8.68386 4.18237C8.75079 4.38838 8.94277 4.52786 9.15938 4.52786H13.0696C13.554 4.52786 13.7554 5.14767 13.3635 5.43237L10.2001 7.73075C10.0248 7.85807 9.95149 8.08375 10.0184 8.28976L11.2268 12.0086C11.3764 12.4693 10.8492 12.8523 10.4573 12.5676L7.29389 10.2693C7.11865 10.1419 6.88135 10.1419 6.70611 10.2693L3.54267 12.5676C3.15081 12.8523 2.62357 12.4693 2.77325 12.0086L3.98157 8.28976C4.04851 8.08375 3.97518 7.85807 3.79994 7.73075L0.636495 5.43237C0.244639 5.14767 0.446028 4.52786 0.93039 4.52786H4.84062C5.05723 4.52786 5.24921 4.38838 5.31614 4.18237L6.52447 0.463524Z"/>
           </svg>
         </span>
-        Favorites
+        {{'Favorites' | translate}}
       </button>
     </div>
     <div class="markets__table">
@@ -79,12 +79,12 @@
                 </svg>
               </span>
         </div>
-        <div class="table__cell-head table__cell-head--tal table__cell-head--p4" style="width: 21%;">Pair</div>
-        <div class="table__cell-head table__cell-head--tal table__cell-head--p4" style="width: 25%;">Price
+        <div class="table__cell-head table__cell-head--tal table__cell-head--p4" style="width: 21%;">{{'Pair' | translate}}</div>
+        <div class="table__cell-head table__cell-head--tal table__cell-head--p4" style="width: 25%;">{{'Price' | translate}}
         </div>
-        <div class="table__cell-head table__cell-head--tal table__cell-head--p4" style="width: 17%;">Change %</div>
+        <div class="table__cell-head table__cell-head--tal table__cell-head--p4" style="width: 17%;">{{'Change %' | translate}}</div>
         <div class="table__cell-head table__cell-head--tar table__cell-head--p4" style="width: 30%;" (click)="sortVolume()">
-          Volume
+          {{'Volume' | translate}}
         </div>
       </div>
       <div class="markets__tbody">
@@ -186,11 +186,11 @@
               fill="#191A39"/>
           </svg>
         </div>
-        <div class="table__cell-head table__cell-head--tal table__cell-head--p4" style="width:100%;">Pair / <span>Vol</span></div>
-        <div class="table__cell-head table__cell-head--tal table__cell-head--p4" style="width:100%;">Last price
+        <div class="table__cell-head table__cell-head--tal table__cell-head--p4" style="width:100%;">{{'Pair / Vol' | translate}}</div>
+        <div class="table__cell-head table__cell-head--tal table__cell-head--p4" style="width:100%;">{{'Last price' | translate}}
         </div>
         <div class="table__cell-head table__cell-head--tar table__cell-head--p4" style="width:100%;">
-          <span style="margin-right: 16px;">24h chg</span>
+          <span style="margin-right: 16px;">{{'24h chg' | translate}}</span>
         </div>
       </div>
       <div class="markets__tbody">
@@ -210,7 +210,7 @@
               <div class="table__cell table__cell--p4" style="width: 100%;" (click)="onSelectCurrencyPair(pair)">
                 <span>{{splitPairName(pair)[0]}}</span>
                 <span style="font-size: 10px; color:#A0A0A0">/ <span>{{splitPairName(pair)[1]}}</span></span>
-                <div class="txt-small txt-light-grey">Vol {{ +pair.volume | number: '1.0-0' | replaceNumber}}</div>
+                <div class="txt-small txt-light-grey">{{'Vol' | translate}} {{ +pair.volume | number: '1.0-0' | replaceNumber}}</div>
               </div>
               <div class="table__cell table__cell--p4" style="width: 100%;" (click)="onSelectCurrencyPair(pair)">
                 <span class="txt-indicate">{{pair.lastOrderRate | replaceNumber:!isFiat }}</span>
@@ -291,7 +291,7 @@
               fill="#E5E5E5"/>
           </svg>
         </span>
-        Fav
+        {{'Fav' | translate}}
       </button>
     </div>
   </div>
