--- a/src/app/dashboard/components/tools/tools.component.html
+++ b/src/app/dashboard/components/tools/tools.component.html
@@ -1,6 +1,6 @@
 <div class="dashboard-tools" style="min-width: 103px" (mouseenter)="showOverlay()" (mouseleave)="hideOverlay()">
   <div class="dashboard-tools__header">
-    Tools
+    {{"Tools" | translate}}
   </div>
 
   <div class="dashboard-tools__item" *ngFor="let item of visibleToolsItems"
@@ -8,7 +8,7 @@
     <div class="dashboard-tools__item-icon">
       <img class="" src="{{item.imgUrl}}">
     </div>
-    <span>{{item.name}}</span>
+    <span>{{item.name | translate}}</span>
   </div>
 
 </div>
