--- a/src/app/funds/balance/refill-money/refill-step-two/refill-crypto/refill-crypto.component.html
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-crypto/refill-crypto.component.html
@@ -3,7 +3,7 @@
 <div class="refill__inputs-wrap">
   <div class="select refill__select">
     <div class="select__value select__value--active" (click)="currencyDropdownToggle()">
-      <!--<img src="../../assets/img/btc-icon.svg" class="select__list-item-icon">-->
+      <img [src]="activeCrypto.name | getIconUrl" class="select__list-item-icon">
       {{activeCrypto.name}}
       <div class="select__triangle"></div>
     </div>
