--- a/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.html
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.html
@@ -10,7 +10,7 @@
              (click)="toggleCurrencyDropdown()"
              [ngClass]="{'select__value--error': !selectedMerchant}"
         >
-          <!--<img src="../../assets/img/btc-icon.svg" class="select__list-item-icon">-->
+          <img [src]="activeFiat.name | getIconUrl" class="select__list-item-icon">
           {{activeFiat.name}}
         </div>
         <div class="select__label">Currency</div>
@@ -31,7 +31,7 @@
         <div class="select__value select__value--active"
              (click)="togglePaymentSystemDropdown()"
         >
-          <!--<img src="../../assets/img/btc-icon.svg" class="select__list-item-icon">-->
+          <img [src]="selectedMerchant.name | getIconUrl" class="select__list-item-icon">
           {{selectedMerchant.name}}
         </div>
         <div class="select__label">Payment system</div>
