--- a/src/app/funds/balance/send-money/send-step-two/send-fiat/send-fiat.component.html
+++ b/src/app/funds/balance/send-money/send-step-two/send-fiat/send-fiat.component.html
@@ -4,7 +4,7 @@
     <div class="send__inputs-wrap">
       <div class="select send__select send__select--custom">
         <div class="select__value select__value--active" (click)="currencyDropdownToggle()">
-          <!--<img src="../../assets/img/btc-icon.svg" class="select__list-item-icon">-->
+          <img [src]="activeFiat ? activeFiat.name : 'no_icon' | getIconUrl" class="select__list-item-icon">
           {{activeFiat ? activeFiat.name : ''}}
         </div>
         <div class="select__label">Currency</div>
@@ -47,7 +47,7 @@
         <div class="select__value select__value--active"
              (click)="togglePaymentSystemDropdown()"
         >
-          <!--<img src="../../assets/img/btc-icon.svg" class="select__list-item-icon">-->
+          <img [src]="selectedMerchant ? selectedMerchant.name : 'no_icon' | getIconUrl" class="select__list-item-icon">
           {{selectedMerchant ? selectedMerchant.name : ''}}
         </div>
         <div class="select__label">Payment system</div>
@@ -73,7 +73,6 @@
                 (click)="selectMerchant(merchant)"
             >
               <img [src]="merchant.name | getIconUrl" class="select__list-item-icon">
-              <!--<img src="../../assets/img/btc-icon.svg" class="select__list-item-icon">-->
               {{merchant.name}}
             </li>
 
