--- a/src/app/dashboard/components/markets/markets.component.scss
+++ b/src/app/dashboard/components/markets/markets.component.scss
@@ -152,3 +152,10 @@
   }
 }
 
+.loading-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+}
