--- a/src/app/dashboard/components/markets/markets.component.html
+++ b/src/app/dashboard/components/markets/markets.component.html
@@ -20,7 +20,7 @@
     </div>
   </div>
 
-  <div class="widget__header--mob" *ngIf="!marketSearch">
+  <div class="widget__header--mob" *ngIf="!marketSearch && !loading">
     <div class="widget__name-mob">Markets</div>
     <div class="widget__search-btn" (click)="toggleSearchModal()">
       <svg width="14" height="14" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -31,7 +31,9 @@
       Search
     </div>
   </div>
-  <div class="widget__content">
+
+
+  <div class="widget__content" *ngIf="!loading">
     <div class="tabs widget__tabs">
       <button class="tabs__item tabs__item--small"
               [ngClass]="{'tabs__item--active': currencyDisplayMode === 'BTC','tab-no-active': currencyDisplayMode !== 'BTC'}"
@@ -175,7 +177,14 @@
     </div>
   </div>
 
-  <div class="widget__content widget__content--mob" *ngIf="!marketSearch">
+    <!-- loading indicator -->
+
+  <div class="widget__content loading-container" *ngIf="loading">
+    <app-loader></app-loader>
+  </div>
+
+
+  <div class="widget__content widget__content--mob" *ngIf="!marketSearch && !loading">
     <!--table mob start-->
     <div class="markets__table widget__table-markets-mob">
       <div class="markets__thead">
