--- a/src/app/dashboard/components/trade-history/trade-history.component.html
+++ b/src/app/dashboard/components/trade-history/trade-history.component.html
@@ -64,7 +64,9 @@
   <div class="widget__header--mob">
     <div class="widget__name-mob">Trade history</div>
   </div>
-  <div class="widget__content">
+
+
+  <div class="widget__content"  *ngIf="!(loading$ | async)">
     <!--table start-->
     <!-- <ng-scrollbar [autoHide]="false" [barClass]="'bar-class'" [thumbClass]="'thumb2'"> -->
     <!--<perfect-scrollbar style="max-width: 600px; height: calc(100vh - 139px);" [config]="config">-->
@@ -215,6 +217,11 @@
     <!--table end-->
   </div>
 
+  <!-- loading indicator -->
+
+  <div class="widget__content loading-container" *ngIf="loading$ | async">
+    <app-loader></app-loader>
+  </div>
 
   <div class="widget__content widget__content--mob">
     <!--table mob start-->
