--- a/src/app/dashboard/components/trade-history/trade-history.component.scss
+++ b/src/app/dashboard/components/trade-history/trade-history.component.scss
@@ -98,3 +98,12 @@
 .widget__content {
   height: calc(100% - 40px);
 }
+
+
+.loading-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+}
