--- a/src/app/funds/balance/balance-mob/balance-mob.component.html
+++ b/src/app/funds/balance/balance-mob/balance-mob.component.html
@@ -14,6 +14,10 @@
               (click)="openSendMoneyPopup.emit(true)">
         Send money
       </button>
+
+      <div *ngIf="loading">
+        <app-loader size="small"></app-loader>
+      </div>
     </div>
   </div>
   <!--filters start-->
@@ -103,7 +107,7 @@
               </td>
             </tr>
           </ng-container>
-          <tr class="table__row--mob" *ngIf="!balances.length">
+          <tr class="table__row--mob" *ngIf="!balances.length && !loading">
               <td class="table__cell table__cell--tac" colspan="4">
                 No matching records found
               </td>
