--- a/src/app/funds/pending-request-mob/pending-request-mob.component.html
+++ b/src/app/funds/pending-request-mob/pending-request-mob.component.html
@@ -3,6 +3,9 @@
   <div class="balance__request-mob">
     <div class="balance__request-mob-header">
       <h6>Pending Requests</h6>
+      <div *ngIf="loading$ | async">
+        <app-loader size="small"></app-loader>
+      </div>
       <span (click)="onGoBack()">
         <svg width="15" height="15" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
