--- a/src/app/funds/balance/refill-money/refill-step-two/refill-crypto/refill-crypto.component.html
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-crypto/refill-crypto.component.html
@@ -53,7 +53,7 @@
     Generate new address
   </button>
 
-  <div class="request-errors" *ngIf="!isGenerateNewAddress && !cryptoDataByName?.merchantCurrencyData[0]?.mainAddress">
+  <div class="request-errors" *ngIf="!isGenerateNewAddress && cryptoDataByName && !cryptoDataByName?.merchantCurrencyData.length">
     Sorry, refill is closed for current moment!
   </div>
 </div>
