added funds routing

--- a/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.html
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.html
@@ -105,7 +105,7 @@
       <b>{{refillData.params.ok_item_1_price}} {{refillData.params.ok_currency}}</b>
     </div>
     <div class="subtitle refill__fiat-successful-subtitle">
-      You can track the progress in history section on <a href="#" class="link">funds</a> page
+      You can track the progress in history section on <a href="#" routerLink="/funds/balances">funds</a> page
     </div>
   </div>
 
