--- a/src/app/dashboard/components/chat/chat-message/chat-message.component.html
+++ b/src/app/dashboard/components/chat/chat-message/chat-message.component.html
@@ -10,5 +10,5 @@
     </div>
     <p class="widget__message-text">{{ message.body }}</p>
   </div>
-  <div class="widget__message-time">{{ getDate(message.messageTime) | date: 'hh:ss'}}</div>
+  <div class="widget__message-time">{{ getDate(message.messageTime) | date: 'hh:mm'}}</div>
 </div>
